Fixed Navbar Overlaped Issue, Added 10% padding-width

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -14,8 +14,16 @@ $green: #33CD99;
 }
 
 body {
+	
 	padding-top: 4.5rem;
+
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.yield {
+	padding-left: 10%;
+	padding-right: 10%;
+	z-index: -1;
 }
 
 .wrapper {
@@ -83,6 +91,7 @@ a {
 }
 
 header {
+	z-index: 99;
 	background: $dark_gray;
 	position: fixed;
 	top: 0;
