--- a/app/assets/stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/notes.css.scss
@@ -1,6 +1,6 @@
 #notes {
 	.note {
-		background: $dark_gray;
+		background: #444;
 		width: 30%;
 		min-height: 150px;
 		margin: 1rem 1%;
