--- a/app/assets/stylesheets/todo.css.scss
+++ b/app/assets/stylesheets/todo.css.scss
@@ -46,6 +46,17 @@ body {
 	padding: 1em 0;
 }
 
+.container_index {
+	width: 70%;
+	max-width: 750px;
+	background: #444;
+	margin: 1.3em auto 0 auto;
+	border-radius: 7px;
+	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
+	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
+	padding: 1em 0;
+}
+
 .todo_list_title {
 	text-align: center;
 	font-weight: 700;
